--- a/hideQuickLaunch/config/write-manifests.json
+++ b/hideQuickLaunch/config/write-manifests.json
@@ -1,4 +1,5 @@
 {
   "$schema": "https://dev.office.com/json-schemas/spfx-build/write-manifests.schema.json",
-  "cdnBasePath": "<!-- PATH TO CDN -->"
+  "cdnBasePath": "https://spwest.sharepoint.com/sites/cdn/SiteAssets/hideQuickLaunch"
+  // "<!-- PATH TO CDN -->"
 }
