--- a/hideAnElement/config/config.json
+++ b/hideAnElement/config/config.json
@@ -11,7 +11,9 @@
       ]
     }
   },
-  "externals": {},
+  "externals": {
+    "jQuery":"https://code.jquery.com/jquery-3.2.1.min.js"    
+  },
   "localizedResources": {
     "HideAnElementWebPartStrings": "lib/webparts/hideAnElement/loc/{locale}.js"
   }
