--- a/brandMyPage/config/write-manifests.json
+++ b/brandMyPage/config/write-manifests.json
@@ -1,4 +1,4 @@
 {
   "$schema": "https://dev.office.com/json-schemas/spfx-build/write-manifests.schema.json",
-  "cdnBasePath": "<!-- PATH TO CDN -->"
+  "cdnBasePath": "https://spwest.sharepoint.com/sites/cdn/SiteAssets/brandMyPage"    
 }
