--- a/brandMyPage/src/webparts/brandMyPage/BrandMyPageWebPart.manifest.json
+++ b/brandMyPage/src/webparts/brandMyPage/BrandMyPageWebPart.manifest.json
@@ -21,17 +21,31 @@
     "officeFabricIconFontName": "Page",
     "properties": {
       "description": "BrandMyPage",
-      "hideQuickLaunchProperty": false,
-      "hideSiteLogoProperty": false,
-      "hideSiteTitleProperty": false,
-      "hideSiteDescriptionProperty": false,
-      "hideSiteMembersProperty": false,
-      "hideTopNavProperty": false,
-      "hideTitleRowProperty": false,
-      "hideCommandBarItemsProperty": false,
-      "hidePageTitleProperty": false,
-      "hideSearchBoxProperty": false,
-      "hideShareButtonProperty": false
+      // "hideQuickLaunchProperty": false,
+      // "hideSiteLogoProperty": false,
+      // "hideSiteTitleProperty": false,
+      // "hideSiteDescriptionProperty": false,
+      // "hideSiteMembersProperty": false,
+      // "hideTopNavProperty": false,
+      // "hideTitleRowProperty": false,
+      // "hideCommandBarItemsProperty": false,
+      // "hidePageTitleProperty": false,
+      // "hideSearchBoxProperty": false,
+      // "hideShareButtonProperty": false,
+      "configOptions":{
+        "hideQuickLaunchProperty": false,
+        "hideSiteLogoProperty": false,
+        "hideSiteTitleProperty": false,
+        "hideSiteDescriptionProperty": false,
+        "hideSiteMembersProperty": false,
+        "hideTopNavProperty": false,
+        "hideTitleRowProperty": false,
+        "hideCommandBarItemsProperty": false,
+        "hidePageTitleProperty": false,
+        "hideSearchBoxProperty": false,
+        "hideShareButtonProperty": false
+      }      
+
     }
   }]
 }
