fixed issue with tab state preservation

--- a/brandMyPage/src/webparts/brandMyPage/BrandMyPageWebPart.manifest.json
+++ b/brandMyPage/src/webparts/brandMyPage/BrandMyPageWebPart.manifest.json
@@ -33,6 +33,7 @@
       // "hideSearchBoxProperty": false,
       // "hideShareButtonProperty": false,
       "configOptions":{
+        "cachedTabKey":0,
         "hideQuickLaunchProperty": false,
         "hideSiteLogoProperty": false,
         "hideSiteTitleProperty": false,
