--- a/brandMyPage/package.json
+++ b/brandMyPage/package.json
@@ -26,9 +26,10 @@
   "devDependencies": {
     "@microsoft/sp-build-web": "~1.3.0",
     "@microsoft/sp-module-interfaces": "~1.3.0",
+    "@microsoft/sp-office-ui-fabric-core": "^1.3.4",
     "@microsoft/sp-webpart-workbench": "~1.3.0",
-    "gulp": "~3.9.1",
     "@types/chai": ">=3.4.34 <3.6.0",
-    "@types/mocha": ">=2.2.33 <2.6.0"
+    "@types/mocha": ">=2.2.33 <2.6.0",
+    "gulp": "~3.9.1"
   }
 }
