added basic layout using readonly object

--- a/MegaMenu/src/webparts/megaMenu/MegaMenuWebPart.manifest.json
+++ b/MegaMenu/src/webparts/megaMenu/MegaMenuWebPart.manifest.json
@@ -18,7 +18,7 @@
     "group": { "default": "Other" },
     "title": { "default": "MegaMenu" },
     "description": { "default": "Mega Menu description" },
-    "officeFabricIconFontName": "Page",
+    "officeFabricIconFontName": "CollapseMenu",
     "properties": {
       "description": "MegaMenu"
     }
